2007-12-16  Christian Persch  <chpe@gnome.org>

	* schemas/Makefile.am:
	R schemas/desktop_gnome_applications_help_viewer.schemas.in:
	Remove the unused, obsolete and buggy schema for the help viewer app.
	Bug #437827.

2007-12-06  Jens Granseuer  <jensgr@gmx.net>

	* schemas/desktop_gnome_interface.schemas.in.in: replace the defunct
	toolbar_icon_size integer setting with a string setting and rename it
	so it doesn't conflict with the old one. Bug #401030.

2007-10-19  Tor Lillqvist  <tml@novell.com>

	* libgnome/gnome-score.c: Map pipe() to _pipe() on Win32.

2007-10-16  Christian Persch  <chpe@gnome.org>

	* schemas/Makefile.am: Install the .schemas files, not the
	.schemas.in. Bug #478299.

2007-10-04  Ray Strode  <rstrode@redhat.com>

	* libgnome/gnome-init.c: apply old distro patch from Dan Walsh to 
	be more SELinux friendly. Spotted by Kjartan Maraas.

2007-10-04  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-init.c: (libgnome_option_cb): Warning fix.
	* tests/Makefile.am: Remove old cruft.
	* tests/test-help-path.c: Same
	* tests/test-moniker.c: Same
	* tests/test-storage.c: Same.

2007-09-19  Christian Persch  <chpe@gnome.org>

	* schemas/Makefile.am: Don't distribute built schema files. Bug
	#478299. Fix "make clean" not to remove files generated by configure.

======================= libgnome 2.20.0 ========================

2007-08-30  Christian Persch  <chpe@gnome.org>

	* configure.in: We don't need a macros dir.

2007-08-28  Christian Persch  <chpe@gnome.org>

	* configure.in:
	* libgnome/gnome-program.c: (split_file_list), (get_module_path),
	(find_module), (gnome_program_module_load): Fix module loading. Bug
	#410549, patch by Mariano Suárez-Alvarez.

2007-08-27  Lucas Rocha  <lucasr@gnome.org>

	Define new default wallpaper for desktop. 
	Patch from Vincent Untz <vuntz@gnome.org>

	* gnome-data/Makefile.am, gnome-data/gnome-default.xml.in.in:
	new wallpaper definition file.