@@ -194,6 +194,17 @@
       </locale>
     </schema>
     <schema>
+      <key>/schemas/desktop/gnome/interface/gtk-im-module</key>
+      <applyto>/desktop/gnome/interface/gtk-im-module</applyto>
+      <owner>gnome</owner>
+      <type>string</type>
+      <default></default>
+      <locale name="C">
+        <short>GTK IM Module</short>
+        <long>Name of the input method module used by GTK+.</long>
+      </locale>
+    </schema>
+    <schema>
       <applyto>/desktop/gnome/interface/document_font_name</applyto>
       <key>/schemas/desktop/gnome/interface/document_font_name</key>
       <owner>gnome</owner>
