@@ -1,3 +1,8 @@
+2007-12-18  Christian Persch  <chpe@gnome.org>
+
+	* schemas/desktop_gnome_interface.schemas.in.in: Add setting for the
+	GTK IM module. Bug #504184, patch by Akira TAGOH.
+
 2007-12-16  Christian Persch  <chpe@gnome.org>
 
 	* schemas/Makefile.am:
